Corrected overflow behavior in Burger (switched to auto so that it won't appear unless needed)

--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -2,7 +2,7 @@
   width: 100%;
   margin: 0 auto;
   height: 250px;
-  overflow-y: scroll;
+  overflow-y: auto;
   text-align: center;
   font-size: 1.2rem;
 }
